runFormatTest(import.meta, ['slang-solidity']);
runFormatTest(import.meta, ['slang-solidity'], { bracketSpacing: true });
